--- a/FrontierSharp/NLog.config
+++ b/FrontierSharp/NLog.config
@@ -43,6 +43,6 @@
     -->
   
     <logger name="*" minlevel="Info" writeTo="logfile" />
-    <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
