--- a/FrontierSharp/packages.config
+++ b/FrontierSharp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
   <package id="NLog" version="4.4.1" targetFramework="net461" />
   <package id="NLog.Config" version="4.4.1" targetFramework="net461" />
   <package id="NLog.Schema" version="4.4.1" targetFramework="net461" />
