Added IWolrd interface and dummy implementation

--- a/FrontierSharp/FrontierSharp.csproj
+++ b/FrontierSharp/FrontierSharp.csproj
@@ -60,7 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyModules\DummyAvatarImpl.cs" />
     <Compile Include="DummyModules\DummyParticlesImpl.cs" />
+    <Compile Include="DummyModules\DummyRendererImpl.cs" />
     <Compile Include="Frontier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
