Added forgotten references in project files

--- a/FrontierSharp/FrontierSharp.csproj
+++ b/FrontierSharp/FrontierSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DummyModules\DummyAvatarImpl.cs" />
     <Compile Include="DummyModules\DummyParticlesImpl.cs" />
     <Compile Include="DummyModules\DummyRendererImpl.cs" />
+    <Compile Include="DummyModules\DummyWorldImpl.cs" />
     <Compile Include="Frontier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
