--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IAvatar.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="IParticles.cs" />
+    <Compile Include="IScene.cs" />
     <Compile Include="IWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRenderer.cs" />
