--- a/Environment/Environment.csproj
+++ b/Environment/Environment.csproj
@@ -41,12 +41,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnvironmentImpl.cs" />
+    <Compile Include="EnvironmentProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{889072ad-5c8d-47d9-8fec-05a9ec728be8}</Project>
       <Name>Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Properties\Properties.csproj">
+      <Project>{0d73456a-0969-4ff6-96a2-9435074b9eb8}</Project>
+      <Name>Properties</Name>
     </ProjectReference>
     <ProjectReference Include="..\Util\Util.csproj">
       <Project>{3ef9cae0-8660-4500-82cb-8f050f0375a6}</Project>
