--- a/FrontierSharp/FrontierSharp.csproj
+++ b/FrontierSharp/FrontierSharp.csproj
@@ -126,6 +126,10 @@
       <Project>{7dd75da0-f018-42d6-bf27-344cfb8deb85}</Project>
       <Name>Particles</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Properties\Properties.csproj">
+      <Project>{0d73456a-0969-4ff6-96a2-9435074b9eb8}</Project>
+      <Name>Properties</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Renderer\Renderer.csproj">
       <Project>{f340b706-735d-42a1-8725-77c9d3ecddd0}</Project>
       <Name>Renderer</Name>
