Big-ish refactoring of property system * Added additional interfaces * Fixed casting bugs * Wired up everything properly

--- a/Properties/Properties.csproj
+++ b/Properties/Properties.csproj
@@ -45,6 +45,12 @@
     <Compile Include="Property.cs" />
     <Compile Include="PropertyExceptions.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{889072ad-5c8d-47d9-8fec-05a9ec728be8}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
