--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -44,24 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IHasProperties.cs" />
+    <Compile Include="Property\IHasProperties.cs" />
     <Compile Include="IAvatar.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="IParticles.cs" />
     <Compile Include="IScene.cs" />
     <Compile Include="IWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IRenderer.cs" />
+    <Compile Include="Property\IProperties.cs" />
+    <Compile Include="Property\IProperty.cs" />
+    <Compile Include="Renderer\IRenderer.cs" />
+    <Compile Include="Renderer\IRendererProperties.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Properties\Properties.csproj">
-      <Project>{0d73456a-0969-4ff6-96a2-9435074b9eb8}</Project>
-      <Name>Properties</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Util\Util.csproj">
       <Project>{3ef9cae0-8660-4500-82cb-8f050f0375a6}</Project>
       <Name>Util</Name>
