--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -44,9 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment\EnvironmentTypes.cs" />
+    <Compile Include="IModule.cs" />
+    <Compile Include="IShaders.cs" />
     <Compile Include="Property\IHasProperties.cs" />
     <Compile Include="IAvatar.cs" />
-    <Compile Include="Environment.cs" />
+    <Compile Include="Environment\IEnvironment.cs" />
     <Compile Include="IParticles.cs" />
     <Compile Include="IScene.cs" />
     <Compile Include="IWorld.cs" />
