Moved IParticles to separate folder

--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Property\IHasProperties.cs" />
     <Compile Include="IAvatar.cs" />
     <Compile Include="Environment\IEnvironment.cs" />
-    <Compile Include="IParticles.cs" />
+    <Compile Include="Particles\IParticles.cs" />
     <Compile Include="IScene.cs" />
     <Compile Include="IWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,6 +69,7 @@
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
