Added IParticleProperties plus implementation, added a whole bunch of properties to particle properties

--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Environment\EnvironmentTypes.cs" />
     <Compile Include="IModule.cs" />
     <Compile Include="IShaders.cs" />
+    <Compile Include="Particles\IParticlesProperties.cs" />
     <Compile Include="Property\IHasProperties.cs" />
     <Compile Include="IAvatar.cs" />
     <Compile Include="Environment\IEnvironment.cs" />
