--- a/Renderer/Renderer.csproj
+++ b/Renderer/Renderer.csproj
@@ -66,6 +66,10 @@
       <Project>{3EF9CAE0-8660-4500-82CB-8F050F0375A6}</Project>
       <Name>Util</Name>
     </ProjectReference>
+    <ProjectReference Include="..\World\World.csproj">
+      <Project>{312819a2-8006-477f-8c01-110e0f0ba40d}</Project>
+      <Name>World</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
