--- a/Particles/Particles.csproj
+++ b/Particles/Particles.csproj
@@ -53,9 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+    <ProjectReference Include="..\Common\Common.csproj">
       <Project>{889072ad-5c8d-47d9-8fec-05a9ec728be8}</Project>
-      <Name>Interfaces</Name>
+      <Name>Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Properties\Properties.csproj">
       <Project>{0d73456a-0969-4ff6-96a2-9435074b9eb8}</Project>
