--- a/Animation/Animation.csproj
+++ b/Animation/Animation.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{889072AD-5C8D-47D9-8FEC-05A9EC728BE8}</ProjectGuid>
+    <ProjectGuid>{808790F8-6668-4E82-A1E8-58D2E3E86B95}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FrontierSharp.Common</RootNamespace>
-    <AssemblyName>Common</AssemblyName>
+    <RootNamespace>FrontierSharp.Animation</RootNamespace>
+    <AssemblyName>Animation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,13 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,43 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Avatar\AnimType.cs" />
-    <Compile Include="Environment\EnvironmentTypes.cs" />
-    <Compile Include="IPlayer.cs" />
-    <Compile Include="IRenderable.cs" />
-    <Compile Include="Particles\ParticleTypes.cs" />
-    <Compile Include="Region\IRegion.cs" />
-    <Compile Include="ISky.cs" />
-    <Compile Include="IText.cs" />
-    <Compile Include="ITexture.cs" />
-    <Compile Include="IGame.cs" />
-    <Compile Include="IConsole.cs" />
-    <Compile Include="IModule.cs" />
-    <Compile Include="IShaders.cs" />
-    <Compile Include="Particles\IParticlesProperties.cs" />
-    <Compile Include="Property\IHasProperties.cs" />
-    <Compile Include="Avatar\IAvatar.cs" />
-    <Compile Include="Environment\IEnvironment.cs" />
-    <Compile Include="Particles\IParticles.cs" />
-    <Compile Include="IScene.cs" />
-    <Compile Include="IWorld.cs" />
+    <Compile Include="Anim.cs" />
+    <Compile Include="Figure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Property\IProperties.cs" />
-    <Compile Include="Property\IProperty.cs" />
-    <Compile Include="Region\RegionTypes.cs" />
-    <Compile Include="Renderer\IRenderer.cs" />
-    <Compile Include="Renderer\IRendererProperties.cs" />
-    <Compile Include="Util\BoundingBox.cs" />
-    <Compile Include="Util\Color3.cs" />
-    <Compile Include="Util\ColorUtils.cs" />
-    <Compile Include="Util\MathUtils.cs" />
-    <Compile Include="Util\Range.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="OpenTK.dll.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
