--- a/FrontierSharp/FrontierSharp.csproj
+++ b/FrontierSharp/FrontierSharp.csproj
@@ -68,7 +68,7 @@
     <Compile Include="DummyModules\DummyScene.cs" />
     <Compile Include="DummyModules\DummyText.cs" />
     <Compile Include="DummyModules\DummySky.cs" />
-    <Compile Include="DummyModules\DummyTexture.cs" />
+    <Compile Include="DummyModules\DummyTextures.cs" />
     <Compile Include="DummyModules\DummyPlayer.cs" />
     <Compile Include="DummyModules\DummyConsole.cs" />
     <Compile Include="DummyModules\DummyGame.cs" />
