Added IFigure with dummy and (not functioning) normal implementation

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation\IFigure.cs" />
     <Compile Include="Avatar\AnimType.cs" />
     <Compile Include="Environment\EnvironmentTypes.cs" />
     <Compile Include="IPlayer.cs" />
