--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IPlayer.cs" />
     <Compile Include="IRenderable.cs" />
     <Compile Include="Particles\ParticleTypes.cs" />
+    <Compile Include="Region\Climate.cs" />
     <Compile Include="Region\IRegion.cs" />
     <Compile Include="ISky.cs" />
     <Compile Include="IText.cs" />
@@ -66,11 +67,11 @@
     <Compile Include="Environment\IEnvironment.cs" />
     <Compile Include="Particles\IParticles.cs" />
     <Compile Include="IScene.cs" />
+    <Compile Include="Region\RegionFlag.cs" />
     <Compile Include="IWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property\IProperties.cs" />
     <Compile Include="Property\IProperty.cs" />
-    <Compile Include="Region\RegionTypes.cs" />
     <Compile Include="Renderer\IRenderer.cs" />
     <Compile Include="Renderer\IRendererProperties.cs" />
     <Compile Include="Util\BoundingBox.cs" />
