--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -66,14 +66,15 @@
     <Compile Include="Avatar\IAvatar.cs" />
     <Compile Include="Environment\IEnvironment.cs" />
     <Compile Include="Particles\IParticles.cs" />
-    <Compile Include="IScene.cs" />
     <Compile Include="Region\RegionFlag.cs" />
+    <Compile Include="Scene\IScene.cs" />
     <Compile Include="IWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property\IProperties.cs" />
     <Compile Include="Property\IProperty.cs" />
     <Compile Include="Renderer\IRenderer.cs" />
     <Compile Include="Renderer\IRendererProperties.cs" />
+    <Compile Include="Scene\ISceneProperties.cs" />
     <Compile Include="Util\BoundingBox.cs" />
     <Compile Include="Util\Color3.cs" />
     <Compile Include="Util\ColorUtils.cs" />
