--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Avatar\AnimType.cs" />
     <Compile Include="Avatar\IAvatarProperties.cs" />
     <Compile Include="Environment\EnvironmentTypes.cs" />
+    <Compile Include="IBaseModule.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IRenderable.cs" />
+    <Compile Include="ITimeCappedModule.cs" />
     <Compile Include="Particles\ParticleTypes.cs" />
     <Compile Include="Region\Climate.cs" />
     <Compile Include="Region\IRegion.cs" />
@@ -89,7 +91,9 @@
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Grid\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
