--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.11\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
       <Private>True</Private>
@@ -60,16 +64,19 @@
     <Compile Include="IPlayer.cs" />
     <Compile Include="IRenderable.cs" />
     <Compile Include="ITimeCapped.cs" />
+    <Compile Include="IWater.cs" />
+    <Compile Include="Particles\IEmitter.cs" />
     <Compile Include="Particles\ParticleTypes.cs" />
     <Compile Include="Region\Climate.cs" />
     <Compile Include="Region\IRegion.cs" />
     <Compile Include="ISky.cs" />
     <Compile Include="IText.cs" />
+    <Compile Include="Shaders\ShaderTypes.cs" />
     <Compile Include="Textures\ITextures.cs" />
     <Compile Include="IGame.cs" />
     <Compile Include="IConsole.cs" />
     <Compile Include="IModule.cs" />
-    <Compile Include="IShaders.cs" />
+    <Compile Include="Shaders\IShaders.cs" />
     <Compile Include="Particles\IParticlesProperties.cs" />
     <Compile Include="Property\IHasProperties.cs" />
     <Compile Include="Avatar\IAvatar.cs" />
